fix: Resolve cross-platform build and test failures in GitHub Actions
Platform-specific fixes:
  - Add missing headers (<condition_variable>, <functional>) to cow_memmgr.hpp for Ubuntu ARM64 compilation
  - Implement vcpkg auto-detection fallback for Windows Boost dependency resolution
  - Enhance macOS ARM page size detection using getconf PAGESIZE to fix COW memory tests
  - Update README benchmark numbers with real Apache Lucene performance data (756 QPS point queries, 4.8 QPS range queries)

Technical improvements:
  - Robust page size detection now uses actual system values instead of architecture guessing
  - Windows CMake configuration auto-detects vcpkg at C:/vcpkg when environment variables fail
  - Added debug logging for page size detection to aid troubleshooting
  - Fixed Apple Silicon 16KB page detection to resolve COW test failures

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/core/src/main/cpp/CMakeLists.txt
+++ b/core/src/main/cpp/CMakeLists.txt
@@ -238,6 +238,21 @@ endif()
 if(WIN32 AND CMAKE_TOOLCHAIN_FILE)
     # Ensure we use the vcpkg provided Boost
     set(Boost_NO_SYSTEM_PATHS ON)
+    message(STATUS "Using vcpkg toolchain for Boost discovery")
+endif()
+
+# Fallback: Try to find vcpkg installation on Windows if toolchain not set
+if(WIN32 AND NOT CMAKE_TOOLCHAIN_FILE)
+    # Check common vcpkg installation paths
+    if(EXISTS "C:/vcpkg/scripts/buildsystems/vcpkg.cmake")
+        set(CMAKE_TOOLCHAIN_FILE "C:/vcpkg/scripts/buildsystems/vcpkg.cmake")
+        set(Boost_NO_SYSTEM_PATHS ON)
+        message(STATUS "Found vcpkg toolchain at C:/vcpkg, using for Boost")
+    elseif(EXISTS "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
+        set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
+        set(Boost_NO_SYSTEM_PATHS ON)
+        message(STATUS "Found vcpkg toolchain via VCPKG_ROOT, using for Boost")
+    endif()
 endif()
 
 find_package(Boost 1.58 REQUIRED COMPONENTS system filesystem thread iostreams)
