fix: Runtime page size detection for cross-platform COW memory management
  - Replace compile-time PAGE_SIZE with runtime detection to ensure correct
    page size on target system rather than build system
  - Rename PAGE_SIZE to RUNTIME_PAGE_SIZE to avoid conflicts with macOS
    system macros
  - Add dedicated cow_memmgr.cpp for static member definition
  - Maintain optimal performance with single memory load access pattern
  - Support automatic detection across platforms:
    * macOS: 4KB (x86_64) or 16KB (Apple Silicon)
    * Linux/Windows: Typically 4KB (configurable)
    * Fallback: 4KB if detection fails

Build improvements:
  - Confirm multi-threaded compilation using all available CPU cores
  - Already enabled via cmake --parallel flag in build.gradle

This ensures the COW memory manager correctly adapts to the runtime
environment's page size, critical for memory protection and performance
on systems with different page sizes (e.g., Apple Silicon's 16KB pages).

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/core/src/main/cpp/build.gradle
+++ b/core/src/main/cpp/build.gradle
@@ -32,6 +32,22 @@ def detectSystemPageSize() {
             // Windows typically uses 4KB
             return 4096
         } else if (os.contains("mac")) {
+            // Check actual CPU architecture using uname
+            try {
+                def unameProcess = "uname -m".execute()
+                unameProcess.waitFor()
+                if (unameProcess.exitValue() == 0) {
+                    def cpuArch = unameProcess.text.trim()
+                    println "CPU architecture (uname -m): ${cpuArch}"
+                    if (cpuArch == "arm64") {
+                        println "Detected Apple Silicon (native ARM64), using 16KB pages"
+                        return 16384
+                    }
+                }
+            } catch (Exception e) {
+                println "uname check failed: ${e.message}"
+            }
+            
             // For macOS, also try getconf to get actual page size
             try {
                 def process = "getconf PAGESIZE".execute()
@@ -125,7 +141,14 @@ task compileNative(type: Exec) {
     description = "Compile the native XTree shared library"
     dependsOn configureNative
     workingDir nativeBuildDir
-    commandLine 'cmake', '--build', '.'
+    
+    // Enable parallel build using all available CPU cores
+    def parallelJobs = Runtime.runtime.availableProcessors()
+    commandLine 'cmake', '--build', '.', '--parallel', parallelJobs.toString()
+    
+    doFirst {
+        println "Building with ${parallelJobs} parallel jobs"
+    }
 }
 
 task buildNative(dependsOn: compileNative) {
