--- a/.github/workflows/merge-validation.yml
+++ b/.github/workflows/merge-validation.yml
@@ -26,7 +26,7 @@ jobs:
             cmake-generator: "Unix Makefiles"
           - os: windows-latest
             runs-on: windows-latest
-            cmake-generator: "MinGW Makefiles"
+            cmake-generator: "Visual Studio 17 2022"
           # Additional ARM builds
           - os: ubuntu-latest
             arch: arm64
@@ -65,20 +65,23 @@ jobs:
           brew update
           brew install cmake boost
       
+      - name: Setup MSVC (Windows)
+        if: matrix.os == 'windows-latest'
+        uses: ilammy/msvc-dev-cmd@v1
+      
       - name: Install dependencies (Windows)
         if: matrix.os == 'windows-latest'
         run: |
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
-          choco install mingw
           
-          git clone https://github.com/Microsoft/vcpkg.git C:/vcpkg
-          C:/vcpkg/bootstrap-vcpkg.bat
-          C:/vcpkg/vcpkg.exe integrate install
-          C:/vcpkg/vcpkg.exe install boost-system boost-filesystem boost-thread boost-iostreams --triplet x64-mingw-static
+          # Boost comes pre-installed on GitHub runners for MSVC
+          echo "Using pre-installed Boost libraries for MSVC"
           
-          echo "CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
-          echo "VCPKG_TARGET_TRIPLET=x64-mingw-static" >> $GITHUB_ENV
-          echo "CMAKE_PREFIX_PATH=C:/vcpkg/installed/x64-mingw-static" >> $GITHUB_ENV
+          # Set up for MSVC build with vcpkg (if needed)
+          if (Test-Path "C:/vcpkg") {
+            echo "CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
+            echo "VCPKG_TARGET_TRIPLET=x64-windows" >> $GITHUB_ENV
+          }
       
       - name: Verify Gradle wrapper
         run: ./gradlew verifyWrapper --no-daemon
